[package]
name = "pieoffice-rust"
authors = ["Caio Geraldes <caio.geraldes@usp.br>"]
description = "Conversion tools for Ancient Indo-European Scripts"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
regex = "1.10.3"
unicode-normalization = "0.1.22"
aegean-numerals-rs = { git = "https://github.com/caiogeraldes/aegean-numerals-rs" }
